force-app/main/default/objects/Briefing__c/Briefing__c.object-meta.xml
<CustomObject>
    <label>Briefing</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Nome de Briefing</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Briefing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>