force-app/main/default/objects/Briefing__c/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modelo</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Briefing</relationshipLabel>
    <relationshipName>Briefing</relationshipName>
    <type>Lookup</type>
</CustomField>