force-app/main/default/objects/Briefing__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Presencial</fullName>
            </value>
            <value>
                <fullName>Não Realizado</fullName>
                <isActive>false</isActive>
                <label>Não Realizado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>