force-app/main/default/objects/Briefing__c/fields/Valido__c.field-meta.xml
<CustomField>
    <fullName>Valido__c</fullName>
    <formula>Modelo__r.Name ==  Voo__r.Modelo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Válido</label>
    <type>Checkbox</type>
</CustomField>